Final fix index.html

--- a/Index.html
+++ b/Index.html
@@ -462,7 +462,7 @@
                                         โดยระบบทำงานด้วยการเชื่อมต่อ <strong>Real-time Latent Diffusion API</strong> ผสานกับการจัดการสถานะแบบ Asynchronous ด้วย React 
                                         <br/><br/>
                                         <span className="text-white/80 italic border-l-2 border-cyan-500 pl-3 block mt-2">
-                                            "โปรเจกต์นี้ถูกสร้างสรรค์ขึ้นเพื่อเป็นผลงานหลัก (Masterpiece) สำหรับประกอบ Portfolio ยื่นเข้าศึกษาต่อในระดับมหาวิทยาลัย เพื่อพิสูจน์ทักษะและความมุ่งมั่นในการเป็นนักพัฒนาซอฟต์แวร์รุ่นใหม่"
+                                            "โปรเจกต์นี้ถูกสร้างสรรค์ขึ้นเพื่อเป็นผลงาน สำหรับประกอบ Portfolio ยื่นเข้าศึกษาต่อในระดับมหาวิทยาลัย เพื่อพิสูจน์ทักษะและความมุ่งมั่นในการเป็นนักโปรแกรมเมอร์รุ่นใหม่"
                                         </span>
                                     </p>
                                 </div>
